fixed statement not being visible on small mobiles

--- a/styles/style.styl
+++ b/styles/style.styl
@@ -246,3 +246,11 @@ div.back-menu
     padding 15px 10px
     &.mobile-back-menu
       display block
+
+// small mobile phones
+@media screen and (max-width: 500px) and (max-height: 550px)
+  .statement
+    top 50px
+    transform none
+    -moz-transform none
+    -webkit-transform none
